--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.0.0",
     "express": "^4.18.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-modal": "^3.16.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
