--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@mui/system": "^5.14.11",
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "express": "^4.18.2",
     "react": "^17.0.0 || ^18.0.0",
